fix spacing issues

--- a/public/css/skeleton.css
+++ b/public/css/skeleton.css
@@ -26,7 +26,7 @@ ul {
 .content-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 180px auto 180px auto 180px;
+  grid-template-rows: 180px min-content 180px;
 }
 
 .registry-grid {
@@ -141,19 +141,19 @@ span.place {
 .overview-questions {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
-  grid-auto-rows: 180px;
+  grid-auto-rows: 180px 180px 180px auto;
   grid-column: 1 / 2;
-  grid-row: 1;
+  grid-row: 2;
 }
 
 .overview {
   grid-column: 3 / 8;
-  grid-row: 2;
+  grid-row: 1;
 }
 
 .overview-marker {
   grid-column: 1 / 2;
-  grid-row: 2;
+  grid-row: 1;
   width: 100%;
   height: 10px;
   background: #f1f0f4;
@@ -161,7 +161,7 @@ span.place {
 
 .questions-marker {
   grid-column: 1 / 2;
-  grid-row: 4;
+  grid-row: 3;
   width: 100%;
   height: 10px;
   background: #f1f0f4;
@@ -169,7 +169,7 @@ span.place {
 
 .questions {
   grid-column: 3 / 8;
-  grid-row: 4;
+  grid-row: 3 / 5;
 }
 
 .schedule-background {
@@ -519,6 +519,11 @@ input[type=radio]:checked:after {content:'\002714';font-size:20px;line-height:60
     width: calc(25% + 20px);
   }
 
+  .questions,
+  .registry-grid {
+    padding-bottom: 90px;
+  }
+
   .schedule {
     padding: 40px 0;
     background: #f9f9fa
@@ -538,6 +543,10 @@ input[type=radio]:checked:after {content:'\002714';font-size:20px;line-height:60
 
   .schedule ul.times {
     grid-column: 2;
+  }
+
+  .schedule ul.times li {
+    font-size: 26px;
   }
 
   .registry {
